--- a/index.html
+++ b/index.html
@@ -1,188 +1,108 @@
 <!doctype html>
 <html lang="sv">
 <head>
-  <meta charset="utf-8" />
-  <title>LIA-redovisning – Conri Turesson</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- Reveal.js via CDN -->
-  <link rel="stylesheet" href="https://unpkg.com/reveal.js@5/dist/reveal.css">
-  <link rel="stylesheet" href="https://unpkg.com/reveal.js@5/dist/theme/black.css" id="theme">
+  <meta charset="utf-8">
+  <title>LIA Presentation</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-  <!-- Egen touch för snyggare look -->
+  <!-- Reveal.js core -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/reveal.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/theme/black.css" id="theme">
+
+  <!-- PDF print support -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/print/pdf.css">
+  
   <style>
-    :root {
-      --accent: #b21e2b; /* mörkröd */
+    /* Lite extra styling */
+    section {
+      text-align: center;
     }
-    .reveal {
-      font-family: ui-sans-serif, system-ui, "Segoe UI", Roboto, Helvetica, Arial;
-      letter-spacing: 0.2px;
-    }
-    .reveal h1, .reveal h2, .reveal h3 {
-      text-transform: none;
-      letter-spacing: 0.5px;
-    }
-    .reveal a { color: var(--accent); }
-    .reveal .slides section {
-      backdrop-filter: blur(2px);
-    }
-    /* Bildkort */
-    .card {
-      border: 1px solid rgba(255,255,255,0.15);
-      border-radius: 18px;
-      padding: 16px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.25);
-      background: rgba(0,0,0,0.25);
-    }
-    /* Bild som täcker snyggt */
-    .cover {
-      width: 100%; height: 420px; object-fit: cover; border-radius: 16px;
-      box-shadow: 0 8px 24px rgba(0,0,0,.35);
-    }
-    /* Liten fotrad */
-    .footer {
-      position: absolute; bottom: 16px; left: 0; right: 0;
-      font-size: 18px; opacity: .7;
+    h1, h2, h3 {
+      text-shadow: 1px 1px 2px #000;
     }
   </style>
 </head>
 <body>
-<div class="reveal">
-  <div class="slides">
+  <div class="reveal">
+    <div class="slides">
 
-    <!-- Titel -->
-    <section data-background-image="assets/cover.jpg" data-background-opacity="0.25">
-      <h1>LIA-redovisning</h1>
-      <h3>TR24HEJKUM</h3>
-      <p>Conri Turesson • Resekonsultstuderande</p>
-      <aside class="notes">
-        5 min total. Kort, tydligt, exempelrikt.
-      </aside>
-    </section>
+      <!-- Titel -->
+      <section data-background-image="cover.jpg">
+        <h1>LIA Presentation</h1>
+        <p>Ditt namn</p>
+      </section>
 
-    <!-- Agenda (frågorna) -->
-    <section>
-      <h2>Upplägg</h2>
-      <ol>
-        <li>Företag & roll</li>
-        <li>Arbetsuppgifter</li>
-        <li>Hur funkar det</li>
-        <li>Roligast</li>
-        <li>Feedback</li>
-        <li>Lärdomar</li>
-        <li>Kompetenser</li>
-        <li>Problem & lösning</li>
-        <li>LIA2 vs LIA1</li>
-        <li>Rekommendation</li>
-      </ol>
-    </section>
+      <!-- Företaget -->
+      <section data-background-image="office.jpg">
+        <h2>Om företaget</h2>
+        <ul>
+          <li>Vad de gör</li>
+          <li>Vilka jag arbetade med</li>
+          <li>Deras mål och fokus</li>
+        </ul>
+      </section>
 
-    <!-- 1. Företag -->
-    <section data-background-image="assets/office.jpg" data-background-opacity="0.15">
-      <h2>1. På vilket företag?</h2>
-      <div class="card">
-        <p><strong>Företag:</strong> <!-- fyll i --> </p>
-        <p><strong>Avdelning/Team:</strong> <!-- fyll i --> </p>
-        <p><strong>Period:</strong> <!-- fyll i --> </p>
-      </div>
-      <aside class="notes">1–2 meningar om verksamheten och varför du valde dem.</aside>
-    </section>
+      <!-- Mina uppgifter -->
+      <section>
+        <h2>Mina arbetsuppgifter</h2>
+        <ul>
+          <li>Projektledning</li>
+          <li>Planering</li>
+          <li>Teamarbete</li>
+        </ul>
+      </section>
 
-    <!-- 2. Arbetsuppgifter -->
-    <section>
-      <h2>2. Mina arbetsuppgifter</h2>
-      <ul>
-        <li><!-- uppgift 1 --></li>
-        <li><!-- uppgift 2 --></li>
-        <li><!-- uppgift 3 --></li>
-      </ul>
-      <p class="footer">Verktyg: Sabre • Travelport • Amadeus</p>
-    </section>
+      <!-- Lärdomar -->
+      <section>
+        <h2>Vad jag lärde mig</h2>
+        <ul>
+          <li>Kunskap 1</li>
+          <li>Kunskap 2</li>
+          <li>Kunskap 3</li>
+        </ul>
+      </section>
 
-    <!-- 3. Hur fungerar allt? -->
-    <section>
-      <h2>3. Hur fungerar allt?</h2>
-      <p>Det här var bra: <!-- punkt --></p>
-      <p>Det här var mindre bra: <!-- punkt --></p>
-      <aside class="notes">Håll det konkret. Ett exempel på flöde från kundförfrågan till bokning.</aside>
-    </section>
+      <!-- Favoritdel -->
+      <section data-background-image="favorites.jpg">
+        <h2>Det bästa under LIA</h2>
+        <p>Min favoritdel var...</p>
+      </section>
 
-    <!-- 4. Roligast -->
-    <section>
-      <h2>4. Roligast att göra</h2>
-      <img class="cover" src="assets/favorites.jpg" alt="Arbetsmoment">
-      <ul>
-        <li><!-- grej 1 --></li>
-        <li><!-- grej 2 --></li>
-      </ul>
-    </section>
+      <!-- Utmaningar -->
+      <section>
+        <h2>Utmaningar</h2>
+        <p>Det svåraste var...</p>
+      </section>
 
-    <!-- 5. Feedback -->
-    <section>
-      <h2>5. Feedback från arbetsgivaren</h2>
-      <blockquote>“<!-- kort citat om din styrka -->”</blockquote>
-      <p>Uppföljning: <!-- vad du gjorde med feedbacken --></p>
-    </section>
+      <!-- Feedback -->
+      <section>
+        <h2>Feedback till företaget</h2>
+        <p>Mina tankar och tips...</p>
+      </section>
 
-    <!-- 6–7. Lärdomar & kompetenser -->
-    <section>
-      <h2>6–7. Lärdomar & nya kompetenser</h2>
-      <ul>
-        <li><!-- lärdom 1 --></li>
-        <li><!-- lärdom 2 --></li>
-        <li><!-- kompetens 1 --></li>
-      </ul>
-    </section>
+      <!-- Framtid -->
+      <section data-background-image="team.jpg">
+        <h2>Framtid</h2>
+        <p>Så här tänker jag använda mina erfarenheter framåt</p>
+      </section>
 
-    <!-- 8. Problem -->
-    <section>
-      <h2>8. Problem jag stötte på</h2>
-      <div class="card">
-        <p><strong>Situation:</strong> <!-- kort beskrivning --></p>
-        <p><strong>Åtgärd:</strong> <!-- vad du gjorde --></p>
-        <p><strong>Resultat:</strong> <!-- utfallet --></p>
-      </div>
-    </section>
+      <!-- Avslut -->
+      <section>
+        <h1>Tack!</h1>
+        <p>Frågor?</p>
+      </section>
 
-    <!-- 9. LIA2 vs LIA1 -->
-    <section>
-      <h2>9. LIA2 jämfört med LIA1</h2>
-      <table>
-        <tr><th>Område</th><th>LIA1</th><th>LIA2</th></tr>
-        <tr><td>Ansvar</td><td><!-- ... --></td><td><!-- ... --></td></tr>
-        <tr><td>Tempo</td><td><!-- ... --></td><td><!-- ... --></td></tr>
-        <tr><td>Kundkontakt</td><td><!-- ... --></td><td><!-- ... --></td></tr>
-      </table>
-    </section>
-
-    <!-- 10. Rek -->
-    <section data-background-image="assets/team.jpg" data-background-opacity="0.20">
-      <h2>10. Rekommenderar jag LIA-platsen?</h2>
-      <h3><!-- Ja/Nej, kort motivering --></h3>
-      <p>Något jag skulle förbättra: <!-- en sak --></p>
-    </section>
-
-    <!-- Avslut -->
-    <section>
-      <h2>Tack!</h2>
-      <p>Frågor?</p>
-      <p class="footer">Kontakt: conri.turesson@exempel.se • LinkedIn</p>
-    </section>
-
+    </div>
   </div>
-</div>
 
-<script src="https://unpkg.com/reveal.js@5/dist/reveal.js"></script>
-<script>
-  Reveal.initialize({
-    hash: true,
-    slideNumber: true,
-    transition: "slide",
-    width: 1280,
-    height: 720,
-    margin: 0.06,
-    controlsTutorial: false,
-    plugins: []
-  });
-</script>
+  <!-- Reveal.js core + plugins -->
+  <script src="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/reveal.js"></script>
+  <script>
+    Reveal.initialize({
+      hash: true,
+      pdfSeparateFragments: false,
+      pdfMaxPagesPerSlide: 1
+    });
+  </script>
 </body>
 </html>
