--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <title>LIA-redovisning – Conri Turesson</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-  <!-- Reveal.js core + tema -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/theme/black.css" id="theme">
+  <!-- Reveal.js core + tema (med version för cache-bump) -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.css?v=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/theme/black.css?v=1" id="theme">
 
   <!-- PDF-stöd -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/print/pdf.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/print/pdf.css?v=1">
 
   <style>
     :root { --accent:#b21e2b; }
@@ -26,13 +26,12 @@
     }
     .cover{ width:100%; height:420px; object-fit:cover; border-radius:16px; box-shadow:0 8px 24px rgba(0,0,0,.35); }
     .footer{ position:absolute; bottom:16px; left:0; right:0; font-size:18px; opacity:.75; }
+
     /* Fast logga på alla slides */
     .brand{
       position:fixed; right:18px; bottom:18px; width:120px; max-width:22vw;
       opacity:.9; z-index:50; pointer-events:none; filter: drop-shadow(0 2px 6px rgba(0,0,0,.5));
     }
-    /* Dölj logga på första sidan om bakgrund redan ÄR logga (kan ändras) */
-    .slide-logo-hide .brand{ display:none; }
 
     /* Lite tightare text på mobil */
     @media (max-width: 540px){
@@ -41,12 +40,12 @@
     }
   </style>
 </head>
-<body class="slide-logo-show">
+<body>
   <div class="reveal">
     <div class="slides">
 
-      <!-- Titel (lägg gärna cover.jpg i root) -->
-      <section data-background-image="cover.jpg" data-background-opacity="0.25">
+      <!-- Titel (lägg cover.jpg i root) -->
+      <section data-background-image="cover.jpg?v=1" data-background-opacity="0.25">
         <h1>LIA-redovisning</h1>
         <h3>TR24HEJKUM • Resekonsult</h3>
         <p>Conri Turesson</p>
@@ -64,14 +63,14 @@
           <li>Feedback</li>
           <li>Lärdomar</li>
           <li>Nya kompetenser</li>
-          <li>Problem & lösning</li>
+          <li>Sekretess & ansvar</li>
           <li>LIA2 vs LIA1</li>
           <li>Rekommendation</li>
         </ol>
       </section>
 
       <!-- 1. Företag -->
-      <section data-background-image="office.jpg" data-background-opacity="0.18">
+      <section data-background-image="office.jpg?v=1" data-background-opacity="0.18">
         <h2>1. Företag</h2>
         <div class="card">
           <p><strong>Namn:</strong> Unforgettable Nordic</p>
@@ -89,7 +88,18 @@
           <li><!-- uppgift 2 --></li>
           <li><!-- uppgift 3 --></li>
         </ul>
-        <p class="footer">Verktyg: Amadeus • Sabre • Travelport</p>
+        <p class="footer">Verktyg: Canva • Google Docs • Google Kalkylblad • Interna (sekretess)</p>
+      </section>
+
+      <!-- Verktyg & arbetssätt -->
+      <section>
+        <h2>Verktyg & arbetssätt</h2>
+        <ul>
+          <li><strong>Canva:</strong> material, pitchar och visuella mallar</li>
+          <li><strong>Google Docs:</strong> texter, riktlinjer och delad feedback</li>
+          <li><strong>Google Kalkylblad:</strong> uppföljning, listor, enklare rapporter</li>
+          <li><strong>Interna verktyg (sekretess):</strong> processer och datahantering</li>
+        </ul>
       </section>
 
       <!-- 3. Hur fungerar allt -->
@@ -97,13 +107,13 @@
         <h2>3. Hur fungerar allt</h2>
         <p><strong>Det som flöt:</strong> <!-- punkt --></p>
         <p><strong>Mindre bra:</strong> <!-- punkt --></p>
-        <aside class="notes">Beskriv 1 konkret flöde: förfrågan → offert → bokning → uppföljning.</aside>
+        <aside class="notes">Beskriv 1 konkret flöde: förfrågan → offert → leverans → uppföljning.</aside>
       </section>
 
       <!-- 4. Roligast -->
-      <section data-background-image="favorites.jpg" data-background-opacity="0.18">
+      <section data-background-image="favorites.jpg?v=1" data-background-opacity="0.18">
         <h2>4. Roligast</h2>
-        <img src="favorites.jpg" class="cover" alt="Favoritmoment">
+        <img src="favorites.jpg?v=1" class="cover" alt="Favoritmoment">
         <ul>
           <li><!-- grej 1 --></li>
           <li><!-- grej 2 --></li>
@@ -113,7 +123,7 @@
       <!-- 5. Feedback -->
       <section>
         <h2>5. Feedback från handledare</h2>
-        <blockquote>“<!-- kort citat om styrka, t.ex. noggrann, trygg i kundkontakt -->”</blockquote>
+        <blockquote>“<!-- kort citat om styrka -->”</blockquote>
         <p><strong>Min uppföljning:</strong> <!-- vad du ändrade/förstärkte --></p>
       </section>
 
@@ -127,13 +137,13 @@
         </ul>
       </section>
 
-      <!-- 8. Problem & lösning -->
+      <!-- 8. Sekretess & ansvar -->
       <section>
-        <h2>8. Problem jag löste</h2>
+        <h2>8. Sekretess & ansvar</h2>
         <div class="card">
-          <p><strong>Situation:</strong> <!-- kort --></p>
-          <p><strong>Åtgärd:</strong> <!-- vad gjorde du --></p>
-          <p><strong>Resultat:</strong> <!-- utfallet --></p>
+          <p><strong>Policy:</strong> Delar inga detaljer om interna system, data eller kundflöden.</p>
+          <p><strong>Min roll:</strong> Följa riktlinjer, skydda information, dokumentera på visningsbar nivå.</p>
+          <p><strong>Effekt:</strong> Trygg hantering och smidigt samarbete internt och med skolan.</p>
         </div>
       </section>
 
@@ -149,7 +159,7 @@
       </section>
 
       <!-- 10. Rekommendation -->
-      <section data-background-image="team.jpg" data-background-opacity="0.20">
+      <section data-background-image="team.jpg?v=1" data-background-opacity="0.20">
         <h2>10. Rekommenderar jag platsen?</h2>
         <h3><!-- Ja/Nej + 1 mening --></h3>
         <p>Skulle förbättra: <!-- en grej --></p>
@@ -166,10 +176,10 @@
   </div>
 
   <!-- Logga visas på ALLA slides (lägg logo.png i root) -->
-  <img src="logo.png" alt="Företagslogga" class="brand" onerror="this.style.display='none'">
+  <img src="logo.png?v=1" alt="Företagslogga" class="brand" onerror="this.style.display='none'">
 
   <!-- Reveal init -->
-  <script src="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.js?v=1"></script>
   <script>
     Reveal.initialize({
       hash: true,
@@ -184,9 +194,6 @@
       pdfSeparateFragments: false,
       pdfMaxPagesPerSlide: 1
     });
-
-    // Om du vill dölja loggan på första sliden, lägg class "slide-logo-hide" på <body>
-    // document.body.classList.add('slide-logo-hide');
   </script>
 </body>
-</html>
+  </html>
