Revise HTML structure and styles for presentation

--- a/index.html
+++ b/index.html
@@ -2,198 +2,157 @@
 <html lang="sv">
 <head>
   <meta charset="utf-8">
-  <title>LIA-redovisning – Conri Turesson</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
-  <!-- Reveal.js core + tema (med version för cache-bump) -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.css?v=1">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/theme/black.css?v=1" id="theme">
-
-  <!-- PDF-stöd -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/print/pdf.css?v=1">
-
+  <title>LIA-presentation</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/reveal.css?v=2">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/theme/black.css?v=2" id="theme">
   <style>
-    :root { --accent:#b21e2b; }
-    .reveal { font-family: ui-sans-serif, system-ui, Segoe UI, Roboto, Helvetica, Arial; }
-    .reveal h1, .reveal h2, .reveal h3 { text-transform:none; letter-spacing:.3px; }
-    .reveal a{ color:var(--accent); }
-    .card{
-      border:1px solid rgba(255,255,255,.18);
-      border-radius:18px; padding:16px 18px;
-      background: rgba(0,0,0,.25);
-      box-shadow: 0 10px 30px rgba(0,0,0,.25);
-      text-align:left;
+    .card {
+      background: rgba(255,255,255,0.05);
+      padding: 1em;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
     }
-    .cover{ width:100%; height:420px; object-fit:cover; border-radius:16px; box-shadow:0 8px 24px rgba(0,0,0,.35); }
-    .footer{ position:absolute; bottom:16px; left:0; right:0; font-size:18px; opacity:.75; }
-
-    /* Fast logga på alla slides */
-    .brand{
-      position:fixed; right:18px; bottom:18px; width:120px; max-width:22vw;
-      opacity:.9; z-index:50; pointer-events:none; filter: drop-shadow(0 2px 6px rgba(0,0,0,.5));
-    }
-
-    /* Lite tightare text på mobil */
-    @media (max-width: 540px){
-      .reveal section { padding: 0 6px !important; }
-      .cover{ height: 240px; }
+    img.logo {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 100px;
+      opacity: 0.8;
     }
   </style>
 </head>
 <body>
-  <div class="reveal">
-    <div class="slides">
+<div class="reveal">
+  <div class="slides">
 
-      <!-- Titel (lägg cover.jpg i root) -->
-      <section data-background-image="cover.jpg?v=1" data-background-opacity="0.25">
-        <h1>LIA-redovisning</h1>
-        <h3>TR24HEJKUM • Resekonsult</h3>
-        <p>Conri Turesson</p>
-        <aside class="notes">5 minuter: kort, konkret, 1 exempel per punkt.</aside>
-      </section>
+    <!-- Titel -->
+    <section>
+      <h1>LIA-redovisning</h1>
+      <p>TR24HEJKUM • Resekonsult</p>
+      <p>Conri Turesson</p>
+    </section>
 
-      <!-- Agenda: skolans 10 frågor -->
-      <section>
-        <h2>Upplägg</h2>
-        <ol>
-          <li>Företag & roll</li>
-          <li>Arbetsuppgifter</li>
-          <li>Hur fungerar allt</li>
-          <li>Roligast</li>
-          <li>Feedback</li>
-          <li>Lärdomar</li>
-          <li>Nya kompetenser</li>
-          <li>Sekretess & ansvar</li>
-          <li>LIA2 vs LIA1</li>
-          <li>Rekommendation</li>
-        </ol>
-      </section>
+    <!-- Agenda -->
+    <section>
+      <h2>Upplägg</h2>
+      <ol>
+        <li>Företag & roll</li>
+        <li>Arbetsuppgifter</li>
+        <li>Hur fungerar allt</li>
+        <li>Roligast</li>
+        <li>Feedback</li>
+        <li>Lärdomar</li>
+        <li>Nya kompetenser</li>
+        <li>Sekretess & ansvar</li>
+        <li>LIA2 vs LIA1</li>
+        <li>Rekommendation</li>
+      </ol>
+    </section>
 
-      <!-- 1. Företag -->
-      <section data-background-image="office.jpg?v=1" data-background-opacity="0.18">
-        <h2>1. Företag</h2>
-        <div class="card">
-          <p><strong>Namn:</strong> Unforgettable Nordic</p>
-          <p><strong>Team/avdelning:</strong> <!-- fyll i --></p>
-          <p><strong>Period:</strong> <!-- fyll i --></p>
-          <p><strong>Varför här:</strong> <!-- 1 mening --></p>
-        </div>
-      </section>
+    <!-- Företag -->
+    <section>
+      <h2>1. Företag</h2>
+      <div class="card">
+        <p><strong>Namn:</strong> Unforgettable Nordic</p>
+        <p><strong>Team/avdelning:</strong> …</p>
+        <p><strong>Period:</strong> …</p>
+        <p><strong>Varför här:</strong> …</p>
+      </div>
+    </section>
 
-      <!-- 2. Arbetsuppgifter -->
-      <section>
-        <h2>2. Arbetsuppgifter</h2>
-        <ul>
-          <li><!-- uppgift 1 --></li>
-          <li><!-- uppgift 2 --></li>
-          <li><!-- uppgift 3 --></li>
-        </ul>
-        <p class="footer">Verktyg: Canva • Google Docs • Google Kalkylblad • Interna (sekretess)</p>
-      </section>
+    <!-- Arbetsuppgifter -->
+    <section>
+      <h2>2. Arbetsuppgifter</h2>
+      <p class="footer">Verktyg: Canva • Google Docs • Google Kalkylblad • Interna (sekretess)</p>
+    </section>
 
-      <!-- Verktyg & arbetssätt -->
-      <section>
-        <h2>Verktyg & arbetssätt</h2>
-        <ul>
-          <li><strong>Canva:</strong> material, pitchar och visuella mallar</li>
-          <li><strong>Google Docs:</strong> texter, riktlinjer och delad feedback</li>
-          <li><strong>Google Kalkylblad:</strong> uppföljning, listor, enklare rapporter</li>
-          <li><strong>Interna verktyg (sekretess):</strong> processer och datahantering</li>
-        </ul>
-      </section>
+    <!-- Verktyg & arbetssätt -->
+    <section>
+      <h2>Verktyg & arbetssätt</h2>
+      <ul>
+        <li><strong>Canva:</strong> material, pitchar och visuella mallar</li>
+        <li><strong>Google Docs:</strong> texter, riktlinjer och delad feedback</li>
+        <li><strong>Google Kalkylblad:</strong> uppföljning, listor, enklare rapporter</li>
+        <li><strong>Interna verktyg (sekretess):</strong> processer och datahantering</li>
+      </ul>
+    </section>
 
-      <!-- 3. Hur fungerar allt -->
-      <section>
-        <h2>3. Hur fungerar allt</h2>
-        <p><strong>Det som flöt:</strong> <!-- punkt --></p>
-        <p><strong>Mindre bra:</strong> <!-- punkt --></p>
-        <aside class="notes">Beskriv 1 konkret flöde: förfrågan → offert → leverans → uppföljning.</aside>
-      </section>
+    <!-- Hur fungerar allt -->
+    <section>
+      <h2>3. Hur fungerar allt</h2>
+      <p><strong>Det som flöt:</strong> det kreativa i Canva och att planera resor</p>
+      <p><strong>Mindre bra:</strong> prissättning, kalkyler och budgetarbete</p>
+    </section>
 
-      <!-- 4. Roligast -->
-      <section data-background-image="favorites.jpg?v=1" data-background-opacity="0.18">
-        <h2>4. Roligast</h2>
-        <img src="favorites.jpg?v=1" class="cover" alt="Favoritmoment">
-        <ul>
-          <li><!-- grej 1 --></li>
-          <li><!-- grej 2 --></li>
-        </ul>
-      </section>
+    <!-- Roligast -->
+    <section>
+      <h2>4. Roligast</h2>
+      <ul>
+        <li>Kreativa moment i Canva</li>
+        <li>Planera resor</li>
+      </ul>
+    </section>
 
-      <!-- 5. Feedback -->
-      <section>
-        <h2>5. Feedback från handledare</h2>
-        <blockquote>“<!-- kort citat om styrka -->”</blockquote>
-        <p><strong>Min uppföljning:</strong> <!-- vad du ändrade/förstärkte --></p>
-      </section>
+    <!-- Feedback -->
+    <section>
+      <h2>5. Feedback från handledare</h2>
+      <div class="card">
+        <p>“…”</p>
+      </div>
+      <p>Min uppföljning: …</p>
+    </section>
 
-      <!-- 6–7. Lärdomar & kompetenser -->
-      <section>
-        <h2>6–7. Lärdomar & nya kompetenser</h2>
-        <ul>
-          <li><!-- lärdom 1 --></li>
-          <li><!-- lärdom 2 --></li>
-          <li><!-- kompetens 1 --></li>
-        </ul>
-      </section>
+    <!-- Lärdomar -->
+    <section>
+      <h2>6–7. Lärdomar & nya kompetenser</h2>
+      <ul>
+        <li>…</li>
+        <li>…</li>
+        <li>…</li>
+      </ul>
+    </section>
 
-      <!-- 8. Sekretess & ansvar -->
-      <section>
-        <h2>8. Sekretess & ansvar</h2>
-        <div class="card">
-          <p><strong>Policy:</strong> Delar inga detaljer om interna system, data eller kundflöden.</p>
-          <p><strong>Min roll:</strong> Följa riktlinjer, skydda information, dokumentera på visningsbar nivå.</p>
-          <p><strong>Effekt:</strong> Trygg hantering och smidigt samarbete internt och med skolan.</p>
-        </div>
-      </section>
+    <!-- Sekretess -->
+    <section>
+      <h2>8. Sekretess & ansvar</h2>
+      <div class="card">
+        <p><strong>Policy:</strong> Delar inga detaljer om interna system, data eller kundflöden.</p>
+        <p><strong>Min roll:</strong> Följa riktlinjer, skydda information, dokumentera på visningsbar nivå.</p>
+        <p><strong>Effekt:</strong> Trygg hantering och smidigt samarbete internt och med skolan.</p>
+      </div>
+    </section>
 
-      <!-- 9. Jämförelse -->
-      <section>
-        <h2>9. LIA2 jämfört med LIA1</h2>
-        <table>
-          <tr><th>Område</th><th>LIA1</th><th>LIA2</th></tr>
-          <tr><td>Ansvar</td><td><!-- ... --></td><td><!-- ... --></td></tr>
-          <tr><td>Tempo</td><td><!-- ... --></td><td><!-- ... --></td></tr>
-          <tr><td>Kundkontakt</td><td><!-- ... --></td><td><!-- ... --></td></tr>
-        </table>
-      </section>
+    <!-- LIA jämförelse -->
+    <section>
+      <h2>9. LIA2 vs LIA1</h2>
+      <p>…</p>
+    </section>
 
-      <!-- 10. Rekommendation -->
-      <section data-background-image="team.jpg?v=1" data-background-opacity="0.20">
-        <h2>10. Rekommenderar jag platsen?</h2>
-        <h3><!-- Ja/Nej + 1 mening --></h3>
-        <p>Skulle förbättra: <!-- en grej --></p>
-      </section>
+    <!-- Rekommendation -->
+    <section>
+      <h2>10. Rekommendation</h2>
+      <p>…</p>
+    </section>
 
-      <!-- Avslut -->
-      <section>
-        <h2>Tack!</h2>
-        <p>Frågor?</p>
-        <p class="footer">Kontakt: <!-- mail/LinkedIn --></p>
-      </section>
+    <!-- Tack -->
+    <section>
+      <h2>Tack!</h2>
+      <p>Frågor?</p>
+    </section>
 
-    </div>
   </div>
+</div>
 
-  <!-- Logga visas på ALLA slides (lägg logo.png i root) -->
-  <img src="logo.png?v=1" alt="Företagslogga" class="brand" onerror="this.style.display='none'">
+<img src="logo.png?v=2" class="logo">
 
-  <!-- Reveal init -->
-  <script src="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.js?v=1"></script>
-  <script>
-    Reveal.initialize({
-      hash: true,
-      slideNumber: true,
-      transition: "slide",
-      width: 1280,
-      height: 720,
-      margin: 0.06,
-      controlsTutorial: false,
-
-      /* PDF */
-      pdfSeparateFragments: false,
-      pdfMaxPagesPerSlide: 1
-    });
-  </script>
+<script src="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/reveal.js?v=2"></script>
+<script>
+  Reveal.initialize({
+    hash: true,
+    slideNumber: true,
+    pdfSeparateFragments: false
+  });
+</script>
 </body>
-  </html>
+</html>
