--- a/index.html
+++ b/index.html
@@ -2,35 +2,38 @@
 <html lang="sv">
 <head>
   <meta charset="utf-8">
-  <title>LIA-presentation</title>
+  <title>LIA-redovisning – Conri Turesson</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/reveal.css?v=2">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/theme/black.css?v=2" id="theme">
+
+  <!-- Reveal.js -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.css?v=3">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/theme/black.css?v=3" id="theme">
+
   <style>
-    .card {
-      background: rgba(255,255,255,0.05);
-      padding: 1em;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    .reveal h1, .reveal h2, .reveal h3, .reveal p, .reveal li {
+      text-shadow: 1px 1px 4px black;
     }
-    img.logo {
+    /* Logga nere till höger */
+    .logo {
       position: fixed;
       bottom: 20px;
       right: 20px;
-      width: 100px;
+      width: 70px;
       opacity: 0.8;
+      z-index: 20;
     }
   </style>
 </head>
 <body>
+
 <div class="reveal">
   <div class="slides">
 
-    <!-- Titel -->
-    <section>
-      <h1>LIA-redovisning</h1>
-      <p>TR24HEJKUM • Resekonsult</p>
-      <p>Conri Turesson</p>
+    <!-- Start / Titel -->
+    <section data-background="norrsken.jpg?v=3" data-background-size="cover" data-background-opacity="0.45">
+      <h1 style="color:white; font-size:2.5em;">LIA-redovisning</h1>
+      <h3 style="color:white;">TR24HEJKUM • Resekonsult</h3>
+      <p style="color:white;">Conri Turesson</p>
     </section>
 
     <!-- Agenda -->
@@ -53,36 +56,36 @@
     <!-- Företag -->
     <section>
       <h2>1. Företag</h2>
-      <div class="card">
-        <p><strong>Namn:</strong> Unforgettable Nordic</p>
-        <p><strong>Team/avdelning:</strong> …</p>
-        <p><strong>Period:</strong> …</p>
-        <p><strong>Varför här:</strong> …</p>
+      <div style="border:1px solid #666; padding:15px; border-radius:8px;">
+        <p><b>Namn:</b> Unforgettable Nordic</p>
+        <p><b>Team/avdelning:</b> …</p>
+        <p><b>Period:</b> …</p>
+        <p><b>Varför här:</b> …</p>
       </div>
     </section>
 
     <!-- Arbetsuppgifter -->
     <section>
       <h2>2. Arbetsuppgifter</h2>
-      <p class="footer">Verktyg: Canva • Google Docs • Google Kalkylblad • Interna (sekretess)</p>
+      <p>Verktyg: Canva • Google Docs • Google Kalkylblad • Interna (sekretess)</p>
     </section>
 
     <!-- Verktyg & arbetssätt -->
     <section>
       <h2>Verktyg & arbetssätt</h2>
       <ul>
-        <li><strong>Canva:</strong> material, pitchar och visuella mallar</li>
-        <li><strong>Google Docs:</strong> texter, riktlinjer och delad feedback</li>
-        <li><strong>Google Kalkylblad:</strong> uppföljning, listor, enklare rapporter</li>
-        <li><strong>Interna verktyg (sekretess):</strong> processer och datahantering</li>
+        <li><b>Canva:</b> material, pitchar och visuella mallar</li>
+        <li><b>Google Docs:</b> texter, riktlinjer och delad feedback</li>
+        <li><b>Google Kalkylblad:</b> uppföljning, listor, enklare rapporter</li>
+        <li><b>Interna verktyg (sekretess):</b> processer och datahantering</li>
       </ul>
     </section>
 
     <!-- Hur fungerar allt -->
     <section>
       <h2>3. Hur fungerar allt</h2>
-      <p><strong>Det som flöt:</strong> det kreativa i Canva och att planera resor</p>
-      <p><strong>Mindre bra:</strong> prissättning, kalkyler och budgetarbete</p>
+      <p><b>Det som flöt:</b> …</p>
+      <p><b>Mindre bra:</b> …</p>
     </section>
 
     <!-- Roligast -->
@@ -90,20 +93,21 @@
       <h2>4. Roligast</h2>
       <ul>
         <li>Kreativa moment i Canva</li>
-        <li>Planera resor</li>
+        <li>Reseplanering</li>
+        <li style="opacity:0.7;">(svårare: prissättning, kalkyl, budget)</li>
       </ul>
     </section>
 
     <!-- Feedback -->
     <section>
       <h2>5. Feedback från handledare</h2>
-      <div class="card">
-        <p>“…”</p>
+      <div style="border:1px solid #666; padding:10px; border-radius:6px; font-style:italic;">
+        “ … ”
       </div>
       <p>Min uppföljning: …</p>
     </section>
 
-    <!-- Lärdomar -->
+    <!-- Lärdomar & nya kompetenser -->
     <section>
       <h2>6–7. Lärdomar & nya kompetenser</h2>
       <ul>
@@ -116,17 +120,20 @@
     <!-- Sekretess -->
     <section>
       <h2>8. Sekretess & ansvar</h2>
-      <div class="card">
-        <p><strong>Policy:</strong> Delar inga detaljer om interna system, data eller kundflöden.</p>
-        <p><strong>Min roll:</strong> Följa riktlinjer, skydda information, dokumentera på visningsbar nivå.</p>
-        <p><strong>Effekt:</strong> Trygg hantering och smidigt samarbete internt och med skolan.</p>
+      <div style="border:1px solid #666; padding:15px; border-radius:8px;">
+        <p><b>Policy:</b> Delar inga detaljer om interna system, data eller kundflöden.</p>
+        <p><b>Min roll:</b> Följa riktlinjer, skydda information, dokumentera på visningsbar nivå.</p>
+        <p><b>Effekt:</b> Trygg hantering och smidigt samarbete internt och med skolan.</p>
       </div>
     </section>
 
-    <!-- LIA jämförelse -->
+    <!-- LIA2 vs LIA1 -->
     <section>
       <h2>9. LIA2 vs LIA1</h2>
-      <p>…</p>
+      <ul>
+        <li>LIA1: …</li>
+        <li>LIA2: …</li>
+      </ul>
     </section>
 
     <!-- Rekommendation -->
@@ -135,18 +142,19 @@
       <p>…</p>
     </section>
 
-    <!-- Tack -->
-    <section>
-      <h2>Tack!</h2>
-      <p>Frågor?</p>
+    <!-- Avslut -->
+    <section data-background="sognefjord.jpg?v=3" data-background-size="cover" data-background-opacity="0.5">
+      <h2 style="color:white; text-shadow:3px 3px 8px black;">Tack för mig!</h2>
+      <p style="color:white; text-shadow:2px 2px 6px black;">Frågor?</p>
     </section>
 
   </div>
 </div>
 
-<img src="logo.png?v=2" class="logo">
+<!-- Logga på alla slides -->
+<img src="logo.png?v=3" class="logo" alt="Logo">
 
-<script src="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/reveal.js?v=2"></script>
+<script src="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.js?v=3"></script>
 <script>
   Reveal.initialize({
     hash: true,
