Update Reveal.js version and background images

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Reveal.js -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.css?v=3">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/theme/black.css?v=3" id="theme">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.css?v=4">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/theme/black.css?v=4" id="theme">
 
   <style>
     .reveal h1, .reveal h2, .reveal h3, .reveal p, .reveal li {
@@ -30,7 +30,7 @@
   <div class="slides">
 
     <!-- Start / Titel -->
-    <section data-background="norrsken.jpg?v=3" data-background-size="cover" data-background-opacity="0.45">
+    <section data-background="norrsken.jpg?v=4" data-background-size="cover" data-background-opacity="0.45">
       <h1 style="color:white; font-size:2.5em;">LIA-redovisning</h1>
       <h3 style="color:white;">TR24HEJKUM • Resekonsult</h3>
       <p style="color:white;">Conri Turesson</p>
@@ -58,7 +58,8 @@
       <h2>1. Företag</h2>
       <div style="border:1px solid #666; padding:15px; border-radius:8px;">
         <p><b>Namn:</b> Unforgettable Nordic</p>
-        <p><b>Team/avdelning:</b> …</p>
+        <p><b>Handledare:</b> Silvia (en av grundarna)</p>
+        <p><b>Medpraktikant:</b> April (klasskompis)</p>
         <p><b>Period:</b> …</p>
         <p><b>Varför här:</b> …</p>
       </div>
@@ -84,8 +85,8 @@
     <!-- Hur fungerar allt -->
     <section>
       <h2>3. Hur fungerar allt</h2>
-      <p><b>Det som flöt:</b> …</p>
-      <p><b>Mindre bra:</b> …</p>
+      <p><b>Det som flöt:</b> det kreativa i Canva och att planera resor</p>
+      <p><b>Mindre bra:</b> prissättning, kalkyler och budgetarbete</p>
     </section>
 
     <!-- Roligast -->
@@ -93,8 +94,7 @@
       <h2>4. Roligast</h2>
       <ul>
         <li>Kreativa moment i Canva</li>
-        <li>Reseplanering</li>
-        <li style="opacity:0.7;">(svårare: prissättning, kalkyl, budget)</li>
+        <li>Planera resor</li>
       </ul>
     </section>
 
@@ -143,7 +143,7 @@
     </section>
 
     <!-- Avslut -->
-    <section data-background="sognefjord.jpg?v=3" data-background-size="cover" data-background-opacity="0.5">
+    <section data-background="sognefjord.jpg?v=4" data-background-size="cover" data-background-opacity="0.5">
       <h2 style="color:white; text-shadow:3px 3px 8px black;">Tack för mig!</h2>
       <p style="color:white; text-shadow:2px 2px 6px black;">Frågor?</p>
     </section>
@@ -152,9 +152,9 @@
 </div>
 
 <!-- Logga på alla slides -->
-<img src="logo.png?v=3" class="logo" alt="Logo">
+<img src="logo.png?v=4" class="logo" alt="Logo">
 
-<script src="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.js?v=3"></script>
+<script src="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.js?v=4"></script>
 <script>
   Reveal.initialize({
     hash: true,
