Update image sources and background versions

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="slides">
 
     <!-- Start / Titel -->
-    <section data-background="norrsken.jpg?v=4" data-background-size="cover" data-background-opacity="0.45">
+    <section data-background="norrsken.jpg?v=5" data-background-size="cover" data-background-opacity="0.45">
       <h1 style="color:white; font-size:2.5em;">LIA-redovisning</h1>
       <h3 style="color:white;">TR24HEJKUM • Resekonsult</h3>
       <p style="color:white;">Conri Turesson</p>
@@ -68,7 +68,13 @@
     <!-- Arbetsuppgifter -->
     <section>
       <h2>2. Arbetsuppgifter</h2>
-      <p>Verktyg: Canva • Google Docs • Google Kalkylblad • Interna (sekretess)</p>
+      <ul>
+        <li>Planering av resor</li>
+        <li>Kreativa moment i Canva</li>
+        <li>Arbete i Google Docs</li>
+        <li>Uppföljning i Google Kalkylblad</li>
+        <li>Interna uppgifter (sekretess)</li>
+      </ul>
     </section>
 
     <!-- Verktyg & arbetssätt -->
@@ -143,7 +149,7 @@
     </section>
 
     <!-- Avslut -->
-    <section data-background="sognefjord.jpg?v=4" data-background-size="cover" data-background-opacity="0.5">
+    <section data-background="sognefjord.jpg?v=5" data-background-size="cover" data-background-opacity="0.5">
       <h2 style="color:white; text-shadow:3px 3px 8px black;">Tack för mig!</h2>
       <p style="color:white; text-shadow:2px 2px 6px black;">Frågor?</p>
     </section>
@@ -152,9 +158,9 @@
 </div>
 
 <!-- Logga på alla slides -->
-<img src="logo.png?v=4" class="logo" alt="Logo">
+<img src="logo.png?v=5" class="logo" alt="Logo">
 
-<script src="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.js?v=4"></script>
+<script src="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.js?v=5"></script>
 <script>
   Reveal.initialize({
     hash: true,
@@ -163,4 +169,4 @@
   });
 </script>
 </body>
-</html>
+  </html>
