--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Reveal.js -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.css?v=5">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/theme/black.css?v=5" id="theme">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.css?v=6">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/theme/black.css?v=6" id="theme">
 
   <style>
     .reveal h1, .reveal h2, .reveal h3, .reveal p, .reveal li {
@@ -30,7 +30,7 @@
   <div class="slides">
 
     <!-- Start / Titel -->
-    <section data-background="norrsken.jpg?v=5" data-background-size="cover" data-background-opacity="0.45">
+    <section data-background="norrsken.jpg?v=6" data-background-size="cover" data-background-opacity="0.45">
       <h1 style="color:white; font-size:2.5em;">LIA-redovisning</h1>
       <h3 style="color:white;">TR24HEJKUM • Resekonsult</h3>
       <p style="color:white;">Conri Turesson</p>
@@ -149,7 +149,7 @@
     </section>
 
     <!-- Avslut -->
-    <section data-background="sognefjord.jpg?v=5" data-background-size="cover" data-background-opacity="0.5">
+    <section data-background="sognefjord.jpg?v=6" data-background-size="cover" data-background-opacity="0.5">
       <h2 style="color:white; text-shadow:3px 3px 8px black;">Tack för mig!</h2>
       <p style="color:white; text-shadow:2px 2px 6px black;">Frågor?</p>
     </section>
@@ -158,9 +158,9 @@
 </div>
 
 <!-- Logga på alla slides -->
-<img src="logo.png?v=5" class="logo" alt="Logo">
+<img src="logo.png?v=6" class="logo" alt="Logo">
 
-<script src="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.js?v=5"></script>
+<script src="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.js?v=6"></script>
 <script>
   Reveal.initialize({
     hash: true,
@@ -169,4 +169,4 @@
   });
 </script>
 </body>
-  </html>
+               </html
