Update index.html for presentation content and styles

--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
+<!-- Version 8 -->
 <!doctype html>
 <html lang="sv">
 <head>
   <meta charset="utf-8">
-  <title>LIA-redovisning – Conri Turesson</title>
+  <title>LIA-presentation</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Reveal.js -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.css?v=6">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/theme/black.css?v=6" id="theme">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/reveal.css?v=8">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/theme/black.css?v=8" id="theme">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/print/pdf.css?v=8" media="print">
 
   <style>
-    .reveal h1, .reveal h2, .reveal h3, .reveal p, .reveal li {
-      text-shadow: 1px 1px 4px black;
+    h1, h2, h3, p, li {
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.7);
     }
-    /* Logga nere till höger */
-    .logo {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      width: 70px;
-      opacity: 0.8;
-      z-index: 20;
+    .reveal section img {
+      max-height: 500px;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.5);
     }
   </style>
 </head>
@@ -30,7 +28,7 @@
   <div class="slides">
 
     <!-- Start / Titel -->
-    <section data-background="norrsken.jpg?v=6" data-background-size="cover" data-background-opacity="0.45">
+    <section data-background="norrsken.jpg?v=8" data-background-size="cover" data-background-opacity="0.45">
       <h1 style="color:white; font-size:2.5em;">LIA-redovisning</h1>
       <h3 style="color:white;">TR24HEJKUM • Resekonsult</h3>
       <p style="color:white;">Conri Turesson</p>
@@ -38,40 +36,36 @@
 
     <!-- Agenda -->
     <section>
-      <h2>Upplägg</h2>
+      <h2>Agenda</h2>
       <ol>
-        <li>Företag & roll</li>
+        <li>Företaget</li>
         <li>Arbetsuppgifter</li>
-        <li>Hur fungerar allt</li>
-        <li>Roligast</li>
+        <li>Verktyg & arbetssätt</li>
+        <li>Roligast / Svårast</li>
         <li>Feedback</li>
-        <li>Lärdomar</li>
-        <li>Nya kompetenser</li>
+        <li>Lärdomar & nya kompetenser</li>
         <li>Sekretess & ansvar</li>
-        <li>LIA2 vs LIA1</li>
+        <li>Jämförelse LIA1 / LIA2</li>
         <li>Rekommendation</li>
+        <li>Avslut</li>
       </ol>
     </section>
 
-    <!-- Företag -->
+    <!-- Företaget -->
     <section>
-      <h2>1. Företag</h2>
-      <div style="border:1px solid #666; padding:15px; border-radius:8px;">
-        <p><b>Namn:</b> Unforgettable Nordic</p>
-        <p><b>Handledare:</b> Silvia (en av grundarna)</p>
-        <p><b>Medpraktikant:</b> April (klasskompis)</p>
-        <p><b>Period:</b> …</p>
-        <p><b>Varför här:</b> …</p>
-      </div>
+      <h2>1. Företaget</h2>
+      <p><b>Unforgettable Nordic</b></p>
+      <p>Handledare: Silvia (grundare)</p>
+      <p>Arbetade tillsammans med min kurskamrat April</p>
     </section>
 
     <!-- Arbetsuppgifter -->
     <section>
       <h2>2. Arbetsuppgifter</h2>
       <ul>
-        <li>Planering av resor</li>
-        <li>Kreativa moment i Canva</li>
-        <li>Arbete i Google Docs</li>
+        <li>Kalkyl i USD → två totalsummor (utan & med påslag)</li>
+        <li>Visuella resplaner i Canva: highlights, hotell, aktiviteter</li>
+        <li>Inclusions i Google Docs: paketpris, vad som ingår & ej ingår</li>
         <li>Uppföljning i Google Kalkylblad</li>
         <li>Interna uppgifter (sekretess)</li>
       </ul>
@@ -81,92 +75,87 @@
     <section>
       <h2>Verktyg & arbetssätt</h2>
       <ul>
-        <li><b>Canva:</b> material, pitchar och visuella mallar</li>
-        <li><b>Google Docs:</b> texter, riktlinjer och delad feedback</li>
-        <li><b>Google Kalkylblad:</b> uppföljning, listor, enklare rapporter</li>
-        <li><b>Interna verktyg (sekretess):</b> processer och datahantering</li>
+        <li><b>Interna verktyg (sekretess):</b> första steget → ta fram itinerariet innan kalkyl & docs</li>
+        <li><b>Google Kalkylblad:</b> alla kostnader i USD, beräknar två totalsummor</li>
+        <li><b>Canva:</b> visuella resplaner med highlights, hotell & aktiviteter</li>
+        <li><b>Google Docs:</b> Inclusions → totalkostnad, vad som ingår & inte ingår</li>
       </ul>
     </section>
 
-    <!-- Hur fungerar allt -->
+    <!-- Roligast / Svårast -->
     <section>
-      <h2>3. Hur fungerar allt</h2>
-      <p><b>Det som flöt:</b> det kreativa i Canva och att planera resor</p>
-      <p><b>Mindre bra:</b> prissättning, kalkyler och budgetarbete</p>
-    </section>
-
-    <!-- Roligast -->
-    <section>
-      <h2>4. Roligast</h2>
-      <ul>
-        <li>Kreativa moment i Canva</li>
-        <li>Planera resor</li>
-      </ul>
+      <h2>3. Roligast / Svårast</h2>
+      <p><b>Roligast:</b> Kreativa moment i Canva & att planera resor</p>
+      <p><b>Svårast:</b> Prissättning, kalkyler & budgetarbete</p>
     </section>
 
     <!-- Feedback -->
     <section>
-      <h2>5. Feedback från handledare</h2>
-      <div style="border:1px solid #666; padding:10px; border-radius:6px; font-style:italic;">
-        “ … ”
-      </div>
-      <p>Min uppföljning: …</p>
+      <h2>4. Feedback</h2>
+      <p>Fick positiv feedback på min struktur och initiativförmåga.</p>
+      <p>Uppskattat att jag skapade tydliga mallar och mappar.</p>
     </section>
 
     <!-- Lärdomar & nya kompetenser -->
     <section>
-      <h2>6–7. Lärdomar & nya kompetenser</h2>
+      <h2>5. Lärdomar & nya kompetenser</h2>
       <ul>
-        <li>…</li>
-        <li>…</li>
-        <li>…</li>
+        <li>Tog med mig erfarenheten från LIA1 där jag agerade projektledare</li>
+        <li>Insåg värdet av att ta ansvar för struktur redan från start</li>
+        <li>Byggde upp en gemensam <b>Drive-struktur</b>:<br>
+          Unforgettable LIA → Done Projects → Conri → Client</li>
+        <li>Varje klientmapp innehåller Canva, Inclusions & Kalkyl</li>
+        <li>Lärde mig hur tydlig struktur sparar tid och underlättar samarbete</li>
       </ul>
     </section>
 
-    <!-- Sekretess -->
+    <!-- Sekretess & ansvar -->
     <section>
-      <h2>8. Sekretess & ansvar</h2>
-      <div style="border:1px solid #666; padding:15px; border-radius:8px;">
-        <p><b>Policy:</b> Delar inga detaljer om interna system, data eller kundflöden.</p>
-        <p><b>Min roll:</b> Följa riktlinjer, skydda information, dokumentera på visningsbar nivå.</p>
-        <p><b>Effekt:</b> Trygg hantering och smidigt samarbete internt och med skolan.</p>
-      </div>
+      <h2>6. Sekretess & ansvar</h2>
+      <p>Delar inga detaljer om interna system, data eller kundflöden.</p>
+      <p>Har följt riktlinjer och dokumenterat på en nivå som går att visa externt.</p>
     </section>
 
-    <!-- LIA2 vs LIA1 -->
+    <!-- Jämförelse -->
     <section>
-      <h2>9. LIA2 vs LIA1</h2>
-      <ul>
-        <li>LIA1: …</li>
-        <li>LIA2: …</li>
-      </ul>
+      <h2>7. Jämförelse LIA1 / LIA2</h2>
+      <p><b>LIA1:</b> Tog en projektledarroll, ansvar från start.</p>
+      <p><b>LIA2:</b> Fokuserat mer på praktiska verktyg, struktur och interna processer.</p>
     </section>
 
     <!-- Rekommendation -->
     <section>
-      <h2>10. Rekommendation</h2>
-      <p>…</p>
+      <h2>8. Rekommendation</h2>
+      <p>Rekommenderar företaget för framtida praktikanter:</p>
+      <ul>
+        <li>Får arbeta praktiskt med riktiga projekt</li>
+        <li>Stort utrymme för initiativ</li>
+        <li>Lärorikt och stöttande klimat</li>
+      </ul>
     </section>
 
     <!-- Avslut -->
-    <section data-background="sognefjord.jpg?v=6" data-background-size="cover" data-background-opacity="0.5">
-      <h2 style="color:white; text-shadow:3px 3px 8px black;">Tack för mig!</h2>
-      <p style="color:white; text-shadow:2px 2px 6px black;">Frågor?</p>
+    <section data-background="sognefjord.jpg?v=8" data-background-size="cover" data-background-opacity="0.5">
+      <h2 style="color:white;">Tack för mig!</h2>
+      <p style="color:white;">Frågor?</p>
     </section>
 
   </div>
 </div>
 
-<!-- Logga på alla slides -->
-<img src="logo.png?v=6" class="logo" alt="Logo">
+<!-- Logga i hörnet -->
+<img src="logo.png?v=8" style="position: fixed; bottom: 20px; right: 20px; width: 120px; opacity: 0.8;">
 
-<script src="https://cdn.jsdelivr.net/npm/reveal.js@5/dist/reveal.js?v=6"></script>
+<!-- Reveal.js -->
+<script src="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/reveal.js?v=8"></script>
 <script>
   Reveal.initialize({
     hash: true,
     slideNumber: true,
-    pdfSeparateFragments: false
+    pdfSeparateFragments: false,
+    pdfMaxPagesPerSlide: 1
   });
 </script>
+
 </body>
-               </html
+  </html>
