Update HTML for version 9 of presentation

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Version 8 -->
+<!-- Version 9 -->
 <!doctype html>
 <html lang="sv">
 <head>
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Reveal.js -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/reveal.css?v=8">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/theme/black.css?v=8" id="theme">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/print/pdf.css?v=8" media="print">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/reveal.css?v=9">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/theme/black.css?v=9" id="theme">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/print/pdf.css?v=9" media="print">
 
   <style>
     h1, h2, h3, p, li {
@@ -28,7 +28,7 @@
   <div class="slides">
 
     <!-- Start / Titel -->
-    <section data-background="norrsken.jpg?v=8" data-background-size="cover" data-background-opacity="0.45">
+    <section data-background="norrsken.jpg?v=9" data-background-size="cover" data-background-opacity="0.45">
       <h1 style="color:white; font-size:2.5em;">LIA-redovisning</h1>
       <h3 style="color:white;">TR24HEJKUM • Resekonsult</h3>
       <p style="color:white;">Conri Turesson</p>
@@ -52,11 +52,14 @@
     </section>
 
     <!-- Företaget -->
-    <section>
+    <section data-background="adventure.jpg?v=9" data-background-size="cover" data-background-opacity="0.35">
       <h2>1. Företaget</h2>
       <p><b>Unforgettable Nordic</b></p>
       <p>Handledare: Silvia (grundare)</p>
       <p>Arbetade tillsammans med min kurskamrat April</p>
+      <br>
+      <img src="logo.png?v=9" style="width:150px; margin-top:20px;">
+      <p style="font-style:italic; margin-top:10px;">"Let’s Start Your Next Nordic Adventure"</p>
     </section>
 
     <!-- Arbetsuppgifter -->
@@ -135,7 +138,7 @@
     </section>
 
     <!-- Avslut -->
-    <section data-background="sognefjord.jpg?v=8" data-background-size="cover" data-background-opacity="0.5">
+    <section data-background="sognefjord.jpg?v=9" data-background-size="cover" data-background-opacity="0.5">
       <h2 style="color:white;">Tack för mig!</h2>
       <p style="color:white;">Frågor?</p>
     </section>
@@ -144,10 +147,10 @@
 </div>
 
 <!-- Logga i hörnet -->
-<img src="logo.png?v=8" style="position: fixed; bottom: 20px; right: 20px; width: 120px; opacity: 0.8;">
+<img src="logo.png?v=9" style="position: fixed; bottom: 20px; right: 20px; width: 120px; opacity: 0.8;">
 
 <!-- Reveal.js -->
-<script src="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/reveal.js?v=8"></script>
+<script src="https://cdn.jsdelivr.net/npm/reveal.js@5.0.4/dist/reveal.js?v=9"></script>
 <script>
   Reveal.initialize({
     hash: true,
@@ -158,4 +161,4 @@
 </script>
 
 </body>
-  </html>
+        </html>
